@@ -34,7 +34,6 @@ import argonms.common.util.collections.Pair;
 import argonms.common.util.output.LittleEndianByteArrayWriter;
 import argonms.game.GameServer;
 import argonms.game.character.GameCharacter;
-import argonms.game.character.PartyList;
 import argonms.game.character.inventory.ItemTools;
 import argonms.game.field.MapEntity.EntityType;
 import argonms.game.field.entity.ItemDrop;
@@ -70,8 +69,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.logging.Level;
@@ -96,7 +95,7 @@ public class GameMap {
 	private final Set<Short> occupiedChairs;
 	private final Map<GameCharacter, ScheduledFuture<?>> timeLimitTasks;
 	private final Map<GameCharacter, ScheduledFuture<?>> decHpTasks;
-	private final ConcurrentMap<Byte, Boolean> occupiedMysticDoorSpots;
+	private final byte[] mysticDoorPortalIds;
 	private volatile boolean disableSpawn;
 
 	protected GameMap(MapStats stats) {
@@ -140,17 +139,19 @@ public class GameMap {
 			decHpTasks = new ConcurrentHashMap<GameCharacter, ScheduledFuture<?>>();
 		else
 			decHpTasks = null;
-		boolean isMysticDoorDestination = false;
-		for (PortalData portal : stats.getPortals().values()) {
-			if (portal.getPortalType() == 6) {
-				isMysticDoorDestination = true;
-				break;
-			}
+
+		TreeSet<Byte> mysticDoorSpots = new TreeSet<Byte>();
+		for (Map.Entry<Byte, PortalData> portal : stats.getPortals().entrySet())
+			if (portal.getValue().getPortalType() == 6)
+				mysticDoorSpots.add(portal.getKey());
+		if (mysticDoorSpots.isEmpty()) {
+			mysticDoorPortalIds = null;
+		} else {
+			assert mysticDoorSpots.size() == 6;
+			mysticDoorPortalIds = new byte[6];
+			for (int i = 0; i < 6; i++)
+				mysticDoorPortalIds[i] = mysticDoorSpots.pollFirst().byteValue();
 		}
-		if (isMysticDoorDestination)
-			occupiedMysticDoorSpots = new ConcurrentHashMap<Byte, Boolean>();
-		else
-			occupiedMysticDoorSpots = null;
 	}
 
 	public MapStats getStaticData() {
@@ -190,21 +191,8 @@ public class GameMap {
 		return null;
 	}
 
-	public byte getFreeMysticDoorLocation() {
-		for (Entry<Byte, PortalData> entry : stats.getPortals().entrySet()) {
-			Byte portalId = entry.getKey();
-			PortalData portal = entry.getValue();
-			if (portal.getPortalType() == 6) {
-				Boolean existing = occupiedMysticDoorSpots.putIfAbsent(portalId, Boolean.TRUE);
-				if (existing == null || !existing.booleanValue())
-					return portalId.byteValue();
-			}
-		}
-		return -1;
-	}
-
-	public void releaseMysticDoorLocation(byte portalId) {
-		occupiedMysticDoorSpots.remove(Byte.valueOf(portalId));
+	public byte getMysticDoorPortalId(byte partyPosition) {
+		return mysticDoorPortalIds[partyPosition];
 	}
 
 	/**
@@ -314,9 +302,8 @@ public class GameMap {
 		} else if (ent.getEntityType() == EntityType.DOOR) {
 			assert ((MysticDoor) ent).isInTown();
 			GameCharacter owner = ((MysticDoor) ent).getOwner();
-			PartyList party = owner.getParty();
-			if (owner == p || party != null && party == p.getParty())
-				p.getClient().getSession().send(ent.getShowExistingSpawnMessage());
+			if (owner.getParty() == null && owner == p)
+				p.getClient().getSession().send(GamePackets.writeSpawnPortal((MysticDoor) ent));
 		}
 	}
 
